crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__a_room_sits_under_its_own_label.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: screen
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"Agents                                                                          "
"  ⏺ project   idle                                                              "
"❯ ⏺ reviewer  idle                                                              "
"Rooms                                                                           "
"  #design  0 seats                                                              "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
