crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__a_room_transcript_reads_as_a_chat.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: screen
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> reviewer: the plan is thin on tests                                           "
"                                                                                "
"> scout: M9's exit criteria cover them                                          "
"                                                                                "
"> then let us ship it                                                           "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ #design > post to the room                                                   │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                       in #design"
