crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__a_running_tool_shows_its_tail.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "render(&state, &ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"⠋ Bash cargo test                                                               "
"  ⎿  compiling bingo-surface-tui…                                               "
"⠋ Bash (esc to interrupt · 0s)                                                  "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ ask anything · / for commands · ! for shell                                 │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
