crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__a_tool_call_that_spawned_an_agent_says_what_it_is_doing.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: screen
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> have it reviewed                                                              "
"                                                                                "
"⏺ reviewer(review the diff)                                                     "
"  ⎿  Running… 0 tools · 0 tokens                                                "
"                                                                                "
"✢ Waiting for 1 background agent to finish                                      "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"1 running                                                            fake/fake-1"
