crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__confirm_dialog.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "render(&state, &ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│Confirm · Delete the branch                                                   │"
"│  feature/x has unmerged commits                                              │"
"│                                                                              │"
"│❯ 1. Confirm                                                                  │"
"│  2. Cancel                                                                   │"
"│  enter to select · ↑/↓ to navigate · esc to cancel                           │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ ask anything · / for commands · ! for shell                                 │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
