crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__ctrl_f_searches_the_transcript_and_esc_gives_the_status_line_back.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: found
---
"> line 1                                                                        "
"                                                                                "
"> line 2                                                                        "
"                                                                                "
"> line 3                                                                        "
"                                                                                "
"> line 4                                                                        "
"                                                                                "
"> line 5                                                                        "
"                                                                                "
"> line 6                                                                        "
"                                                                                "
"> line 7                                                                        "
"                                                                                "
"> line 8                                                                        "
"                                                                                "
"> line 9                                                                        "
"                                                                                "
"                   ↓ 99 lines below · end or click to follow                    "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"/line 4  1/11 · n/N · esc                                                       "
