crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__ctrl_p_shows_what_the_plugins_wrote_into_the_session.snap
---
source: crates/bingo-surface-tui/src/view.rs
assertion_line: 2020
expression: screen
---
"❯ bingo.rooms · members                                                         "
"  ├─ reviewer                                                                   "
"  └─ scout [ live ]                                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ #design > post to the room                                                   │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                       in #design"
