crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__ctrl_t_shows_what_the_plugins_wrote_into_the_session.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: screen
---
"❯ bingo.rooms · members                                                         "
"  ├─ reviewer                                                                   "
"  └─ scout [ live ]                                                             "
"                                                                                "
"  bingo.tasks · tasks                                                           "
"  id  status       subject         owner                                        "
"  ─────────────────────────────────────────                                     "
"   1  pending      write the plan  –                                            "
"   2  in_progress  ship it         reviewer                                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ #design > post to the room                                                   │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                       in #design"
