crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__dropdown.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "render(&state, &ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ /                                                                           │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  /help    shortcuts and commands                                               "
"  /clear   start a fresh session here                                           "
"  /resume  reopen a session                                                     "
"  /exit    leave bingo                                                          "
"  /quit    leave bingo                                                          "
"  /model   [provider/]model                                                     "
"? for shortcuts · / commands · ! shell                                    fake-1"
