crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__help_panel.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "draw_sized(100, 28, &state, &ui, now)"
---
"enter        send the message · open the focused…  ctrl+g       the same list · ↑↓ to walk it       "
"shift+enter  newline (ctrl+j · alt+enter · \ ent…  ctrl+t       show / hide the task list           "
"esc          sheet → card → dropdown → interrupt   ctrl+p       plugin state (rooms, panels to pin) "
"esc esc      rewind to an earlier turn             tab          complete → queue → next card        "
"ctrl+c       interrupt · clear input · twice to …  shift+tab    cycle permission mode               "
"ctrl+d       exit on an empty input                1-9 · y/a/n  answer the open dialog              "
"up/down      prompt history at the first and las…  ctrl+e       expand the dialog's preview         "
"down         walk the sessions (empty box)         ctrl+o       expand the latest result · again fo…"
"ctrl+a/e     start / end of the line (home · end)  ctrl+b       background the running command      "
"alt+b/f      move one word                         / · !        run a command · run a shell line    "
"ctrl+w/u/k   delete word · to line start · to li…  click        a picture · open it                 "
"pgup/pgdn    scroll the transcript                 ?            toggle this panel                   "
"v · drag     select · ↑↓←→ or a drag extend · y,…                                                   "
"                                                                                                    "
"/help    shortcuts and commands                                                                     "
"/clear   start a fresh session here                                                                 "
"/resume  reopen a session                                                                           "
"/exit    leave bingo                                                                                "
"/quit    leave bingo                                                                                "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                                    │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                                          fake/fake-1"
